--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.43.3",
     "vue-router": "^4.2.5",
     "crypto-js": "^4.1.1"
+    "html2pdf.js": "^0.10.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
