--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "vue": "^3.3.4",
     "@supabase/supabase-js": "^2.43.3",
     "vue-router": "^4.2.5",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
     "html2pdf.js": "^0.10.1"
   },
   "devDependencies": {
