--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue-router": "^4.2.5",
     "crypto-js": "^4.1.1",
     "html2pdf.js": "^0.10.1",
-    "luxon": "^3.4.4"
+    "luxon": "^3.4.4",
+    "vue3-datepicker": "^0.10.4"
   },
   "devDependencies": {
     "vite": "^5.0.0",
