--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "crypto-js": "^4.1.1",
     "html2pdf.js": "^0.10.1",
     "luxon": "^3.4.4",
-    "vue3-datepicker": "^0.9.6"
+    "@vuepic/vue-datepicker": "^3.8.5"
   },
   "devDependencies": {
     "vite": "^5.0.0",
