--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "html2pdf.js": "^0.10.1",
     "luxon": "^3.4.4",
     "@vuepic/vue-datepicker": "11.0.2",
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/vue3": "^6.1.8"
+    "@fullcalendar/core": "6.1.8",
+    "@fullcalendar/daygrid": "6.1.8",
+    "@fullcalendar/timegrid": "6.1.8",
+    "@fullcalendar/vue3": "6.1.8"
   },
   "devDependencies": {
     "vite": "^5.0.0",
