--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@fullcalendar/vue3": "^6.1.8"
+    "chart.js": "^4.4.1"
   },
   "devDependencies": {
     "vite": "^5.0.0",
