--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@fullcalendar/daygrid": "^6.1.8",
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/vue3": "^6.1.8"
+    "@fullcalendar/vue3": "^6.1.8",
     "chart.js": "^4.4.1"
   },
   "devDependencies": {
